themes/burns-exhibits/assets/sass/prev-next-nav.scss
.nav-arrow {
    border: solid black;
    border-width: 0 3px 3px 0;
    display: inline-block;
    padding: 3px;

    &--right {
        transform: rotate(-45deg);
        margin-left: .25em;
        -webkit-transform: rotate(-45deg);
    }

    &--left {
        transform: rotate(135deg);
        margin-right: .25em;
        -webkit-transform: rotate(135deg);
    }

    &--up {
        transform: rotate(-135deg);
        -webkit-transform: rotate(-135deg);
    }

    &--down {
        transform: rotate(45deg);
        -webkit-transform: rotate(45deg);
    }
}

.prev-next {
    .next-wrapper {
        text-align: right
    }
}

@media (max-width: #{map-get($grid-breakpoints, "md")}) {

    a.next-link,
    a.prev-link {
        position: absolute;
        left: 0;
        top: 0;
        padding: 1em;
        text-align: center;
        width: 100%;
        box-shadow: 0 0 5px -1px rgba(0, 0, 0, 0.2);
        background: #f3f5f4;
    }

    form.mobile-menu {
        margin-bottom: 2em;
    }

    .prev-wrapper {
        top: 4em;
    }

    .prev-wrapper,
    .next-wrapper {
        box-shadow: 0 0 5px -1px rgba(0, 0, 0, 0.2);
        background-color: #111;
    }
}

